--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
-  "name": "tiper-app",
-  "main": "app/main.js",
+  "name": "tiper",
+  "main": "main.js",
   "description": "An app to help improve and have fun with typing",
   "version": "0.0.0",
   "author": "Jack DuPlessis",
   "dependencies": {
   },
   "scripts": {
-    "dev": "webpack-dev-server --devtool eval --hot --progress --colors --content-base build",
+    "dev": "webpack-dev-server ./main --host=192.168.2.116 --hot --inline",
     "deploy": ""
   },
   "devDependencies": {
+    "timrjs": "^0.9.x",
+    "keycoder": "^1.1.1",
+    "babel-loader": "^6.2.x",
+    "babel-core": "^6.18.x",
+    "babel-preset-es2015": "^6.18.x",
     "webpack": "^1.13.x",
     "webpack-dev-server": "^1.16.x",
     "style-loader": "^0.13.x",
