--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "dependencies": {
   },
   "scripts": {
-    "dev": "webpack-dev-server ./main --host=localhost --hot --inline",
+    "dev": "webpack-dev-server ./main --host=`hostname -I` --hot --inline",
     "deploy": ""
   },
   "devDependencies": {
